templates/thanos-traefik_template.yaml
---
# Source: thanos-traefik/templates/ingressroutetcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: release-name-thanos-traefik-ingress
  labels:
    helm.sh/chart: thanos-traefik-0.0.1
    app.kubernetes.io/name: thanos-traefik
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: HostSNI(`server.thanos.localhost.localdomain`)
      services:
      - name: kube-prometheus-stack-prometheus
        port: 10901
  tls:
    secretName: kommander-thanos-server-tls
    options:
      name: release-name-thanos-traefik-tls-options
      namespace: default
    passthrough: false
